--- a/Prescription Drug Abuse.html
+++ b/Prescription Drug Abuse.html
@@ -39,7 +39,7 @@
                                             <div class="card-body">
                                                 <h5 class="card-title card1">Start this course</h5>
                                                 <p class="card-text text1">
-                                                    How much do you really  know about PRESCRIPTION DRUG ABUSE?
+                                                    How much do you really  know about Prescription Drug Abuse?
                                                 </p>
                                             </div>
                                         
